# EXACT-QueueRunner

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.dev  pyproject.toml
QueueRunner/: QueueRunner.py  config.py  requirements.txt
QueueRunner/MIDOG2022/: MIDOG2022_inference.py
QueueRunner/handlers/: celldetection.py  midog2021.py  midog2022.py  plugin-celldetection-ihc.py  plugin-hovernet.py  plugin-midog2021.py  plugin-midog2022.py  plugin-segmentation-catch.py
QueueRunner/handlers/CATCH/: catch_inference.py
QueueRunner/handlers/Cells/: Cells_inference.py
QueueRunner/handlers/Lymphocytes/: lymphocyte_inference.py
QueueRunner/handlers/MIDOG2021/: MIDOG2021_inference.py
QueueRunner/handlers/MIDOG2022/: MIDOG2022_inference.py
QueueRunner/handlers/utils/: inference_utils.py  nms_WSI.py  object_detection_helper.py
QueueRunner/handlers/utils/models/: RetinaNet.py
docker/: entrypoint.sh
src/exact_queue_runner/: __main__.py  exact_connection.py  plugin_handler.py  runner.py  scripts.py  utils.py
src/exact_queue_runner/handlers/: plugin-celldetection-ihc.py  plugin-hovernet.py  plugin-midog2022.py  plugin-segmentation-catch.py
src/exact_queue_runner/plugins/: __init__.py  _plugin_celldetection_ihc.py  _plugin_midog2021.py  _plugin_midog2022.py  _plugin_segmentation_catch.py  plugin_hovernet.py  pluginbase.py  registry.py
src/exact_queue_runner/plugins/utils/: exception.py
src/queue_runner/: config_template.py  runner.py  scripts.py  utils.py
src/queue_runner/handlers/: plugin-hovernet.py
(+5 files in other folders)
