[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/exact_queue_runner/_version.py"

[tool.hatch.version]
source = "vcs"

[project.scripts]
queue_runner = "exact_queue_runner.scripts:cli"

[project]
name = "exact_queue_runner"
#version = "1.0.0"
dynamic = ["version"]
authors = [
]
description = "Client to run plugin jobs submitted from an Exact server"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "openslide-python",
  "django-project-version>=0.13.0",
  "torchvision>=0.14.1",
  "typing-extensions>=4.4.0",
  "albumentations>=1.3.0",
  "fastai>=2.7.10",
  "pytorch-lightning>=1.9.0",
  "qt-wsi-registration>=0.0.6",
  "EXCAT-Sync>=0.0.22",
  "tiatoolbox>=1.5.1",
  "pyvips",
  "h5py",
  "click",
]











